--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,9 +15,10 @@
     "react-scripts": "3.4.3",
     "rete": "^1.4.5-rc.1",
     "rete-area-plugin": "^0.2.1",
+    "rete-connection-path-plugin": "^0.3.1",
     "rete-connection-plugin": "^0.9.0",
+    "rete-history-plugin": "^0.2.1",
     "rete-react-render-plugin": "^0.2.1",
-    "rete-vue-render-plugin": "^0.5.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
